@@ -335,7 +335,7 @@ Vue.component('lms-ui-settings', {
     <v-list-tile>
      <v-list-tile-content @click="queueBackdrop = !queueBackdrop" class="switch-label">
       <v-list-tile-title>{{i18n('Draw background')}}</v-list-tile-title>
-      <v-list-tile-sub-title>{{i18n('Use cover of current track as background.')}}</v-list-tile-sub-title>
+      <v-list-tile-sub-title>{{desktopLayout ? i18n('Use cover of current track as background (when queue is pinned).') : i18n('Use cover of current track as background.')}}</v-list-tile-sub-title>
      </v-list-tile-content>
      <v-list-tile-action><m3-switch v-model="queueBackdrop"></m3-switch></v-list-tile-action>
     </v-list-tile>
@@ -544,6 +544,9 @@ Vue.component('lms-ui-settings', {
         },
         allowTint() {
             return 'lyrion'!=this.color || !this.colorToolbars || this.colorUsage!=COLOR_USE_STANDARD
+        },
+        desktopLayout() {
+            return this.$store.state.desktopLayout
         }
     },
     mounted() {
